import spectra to custom database